@@ -12,6 +12,8 @@ Changes in version 2.5-0
   
   o Index plots may be marked by groups.
   
+  o Enhancements to Density Plot dialog.
+  
   o Interface improvements.
 
 Changes in version 2.4-4
